deploy: 93469c7a3720d277ee698e48d582e101cd3db347

--- a/_modules/sigkit/core/base.html
+++ b/_modules/sigkit/core/base.html
@@ -175,6 +175,28 @@
                 <span class="n">np</span><span class="o">.</span><span class="n">float32</span>
             <span class="p">)</span>
         <span class="p">)</span></div>
+
+
+<div class="viewcode-block" id="Signal.to_baseband">
+<a class="viewcode-back" href="../../../api/sigkit.core.html#sigkit.core.base.Signal.to_baseband">[docs]</a>
+    <span class="k">def</span><span class="w"> </span><span class="nf">to_baseband</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="s2">&quot;Signal&quot;</span><span class="p">:</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Convert the Signal to baseband by removing the carrier frequency.</span>
+
+<span class="sd">        If the carrier frequency is 0, returns a copy of the input Signal.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">carrier_frequency</span> <span class="o">==</span> <span class="mf">0.0</span><span class="p">:</span>
+            <span class="k">return</span> <span class="bp">self</span>
+
+        <span class="n">t</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">samples</span><span class="o">.</span><span class="n">size</span><span class="p">)</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">sample_rate</span>
+        <span class="n">baseband_samples</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">samples</span> <span class="o">*</span> <span class="n">np</span><span class="o">.</span><span class="n">exp</span><span class="p">(</span>
+            <span class="o">-</span><span class="mi">1</span><span class="n">j</span> <span class="o">*</span> <span class="mi">2</span> <span class="o">*</span> <span class="n">np</span><span class="o">.</span><span class="n">pi</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">carrier_frequency</span> <span class="o">*</span> <span class="n">t</span>
+        <span class="p">)</span>
+
+        <span class="k">return</span> <span class="n">Signal</span><span class="p">(</span>
+            <span class="n">samples</span><span class="o">=</span><span class="n">baseband_samples</span><span class="p">,</span>
+            <span class="n">sample_rate</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">sample_rate</span><span class="p">,</span>
+            <span class="n">carrier_frequency</span><span class="o">=</span><span class="mf">0.0</span><span class="p">,</span>
+        <span class="p">)</span></div>
 </div>
 
 </pre></div>
