--- a/genindex.html
+++ b/genindex.html
@@ -194,6 +194,10 @@
       <li><a href="api/sigkit.metrics.html#sigkit.metrics.integrity.estimate_snr">estimate_snr() (in module sigkit.metrics.integrity)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.modem.html#sigkit.modem.base.Modem.extract_symbols">extract_symbols() (sigkit.modem.base.Modem method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="F">F</h2>
@@ -407,6 +411,10 @@
 
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.core.html#sigkit.core.base.Signal.to_baseband">to_baseband() (sigkit.core.base.Signal method)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/sigkit.core.html#sigkit.core.base.Signal.to_tensor">to_tensor() (sigkit.core.base.Signal method)</a>
 </li>
