deploy: 24471adde6415b90183ddb2c7b044a6e0075b580

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -130,11 +130,12 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="sigkit/core/base.html">sigkit.core.base</a></li>
-<li><a href="sigkit/datasets/base.html">sigkit.datasets.base</a></li>
+<li><a href="sigkit/datasets/procedural.html">sigkit.datasets.procedural</a></li>
 <li><a href="sigkit/impairments/awgn.html">sigkit.impairments.awgn</a></li>
 <li><a href="sigkit/impairments/base.html">sigkit.impairments.base</a></li>
 <li><a href="sigkit/impairments/frequency_shift.html">sigkit.impairments.frequency_shift</a></li>
 <li><a href="sigkit/metrics/integrity.html">sigkit.metrics.integrity</a></li>
+<li><a href="sigkit/metrics/visuals.html">sigkit.metrics.visuals</a></li>
 <li><a href="sigkit/modem/base.html">sigkit.modem.base</a></li>
 <li><a href="sigkit/modem/psk.html">sigkit.modem.psk</a></li>
 <li><a href="sigkit/transforms/awgn.html">sigkit.transforms.awgn</a></li>
