--- a/genindex.html
+++ b/genindex.html
@@ -243,7 +243,7 @@
 </li>
         <li><a href="api/sigkit.datasets.html#module-sigkit.datasets">sigkit.datasets</a>
 </li>
-        <li><a href="api/sigkit.datasets.html#module-sigkit.datasets.base">sigkit.datasets.base</a>
+        <li><a href="api/sigkit.datasets.html#module-sigkit.datasets.procedural">sigkit.datasets.procedural</a>
 </li>
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments">sigkit.impairments</a>
 </li>
@@ -256,6 +256,8 @@
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics">sigkit.metrics</a>
 </li>
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics.integrity">sigkit.metrics.integrity</a>
+</li>
+        <li><a href="api/sigkit.metrics.html#module-sigkit.metrics.visuals">sigkit.metrics.visuals</a>
 </li>
         <li><a href="api/sigkit.modem.html#module-sigkit.modem">sigkit.modem</a>
 </li>
@@ -274,6 +276,22 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_constellation">plot_constellation() (in module sigkit.metrics.visuals)</a>
+</li>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_frequency">plot_frequency() (in module sigkit.metrics.visuals)</a>
+</li>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_phase">plot_phase() (in module sigkit.metrics.visuals)</a>
+</li>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_psd">plot_psd() (in module sigkit.metrics.visuals)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_spectrogram">plot_spectrogram() (in module sigkit.metrics.visuals)</a>
+</li>
+      <li><a href="api/sigkit.metrics.html#sigkit.metrics.visuals.plot_time">plot_time() (in module sigkit.metrics.visuals)</a>
+</li>
+      <li><a href="api/sigkit.datasets.html#sigkit.datasets.procedural.ProceduralDataset">ProceduralDataset (class in sigkit.datasets.procedural)</a>
+</li>
       <li><a href="api/sigkit.modem.html#sigkit.modem.psk.PSK">PSK (class in sigkit.modem.psk)</a>
 </li>
   </ul></td>
@@ -315,10 +333,10 @@
 </li>
       </ul></li>
       <li>
-    sigkit.datasets.base
+    sigkit.datasets.procedural
 
       <ul>
-        <li><a href="api/sigkit.datasets.html#module-sigkit.datasets.base">module</a>
+        <li><a href="api/sigkit.datasets.html#module-sigkit.datasets.procedural">module</a>
 </li>
       </ul></li>
       <li>
@@ -342,8 +360,6 @@
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.base">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     sigkit.impairments.frequency_shift
 
@@ -351,6 +367,8 @@
         <li><a href="api/sigkit.impairments.html#module-sigkit.impairments.frequency_shift">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     sigkit.metrics
 
@@ -363,6 +381,13 @@
 
       <ul>
         <li><a href="api/sigkit.metrics.html#module-sigkit.metrics.integrity">module</a>
+</li>
+      </ul></li>
+      <li>
+    sigkit.metrics.visuals
+
+      <ul>
+        <li><a href="api/sigkit.metrics.html#module-sigkit.metrics.visuals">module</a>
 </li>
       </ul></li>
       <li>
@@ -403,8 +428,6 @@
       <li><a href="api/sigkit.core.html#sigkit.core.base.SigKitError">SigKitError</a>
 </li>
       <li><a href="api/sigkit.core.html#sigkit.core.base.Signal">Signal (class in sigkit.core.base)</a>
-</li>
-      <li><a href="api/sigkit.datasets.html#sigkit.datasets.base.SignalDataset">SignalDataset (class in sigkit.datasets.base)</a>
 </li>
   </ul></td>
 </tr></table>
